--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,8 @@ rodio = "0.11"
 hotkey = "0.3"
 iced = "0.1"
 clap = "3.0.0-beta.1"
-ringbuf = "0.2.1"
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+anyhow = "1.0"
+log = "0.4"
+env_logger = "0.7.1"
