--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
 log = "0.4"
 env_logger = "0.7.1"
+random_color = "0.4"
 
 [build-dependencies]
 fs_extra = "1.1.0"
