--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = "1.0"
 log = "0.4"
 env_logger = "0.7.1"
 random_color = "0.4"
+reqwest = { version = "0.10", features = ["blocking"] }
 
 [build-dependencies]
 fs_extra = "1.1.0"
