--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ env_logger = "0.7.1"
 random_color = "0.4"
 ringbuf = "0.2.1"
 reqwest = { version = "0.10", features = ["blocking"] }
+regex = "1"
+strum = "0.18"
+strum_macros = "0.18"
 
 [build-dependencies]
 fs_extra = "1.1.0"
