--- a/extern/hotkey-rs/Cargo.toml
+++ b/extern/hotkey-rs/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror = "1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.8", features = ["winuser"] }
