--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ edition = "2018"
 cpal = "0.11"
 rodio = "0.11"
 hotkey = { path = "extern/hotkey-rs", version = "0.3" }
-iced = "0.1"
+iced = { version = "0.1", features = ["tokio"] }
+iced_native = "0.2"
 clap = "3.0.0-beta.1"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
@@ -24,6 +25,8 @@ reqwest = { version = "0.10", features = ["blocking"] }
 regex = "1"
 strum = "0.18"
 strum_macros = "0.18"
+crossbeam-channel = "0.4"
+tokio = "0.2"
 
 [build-dependencies]
 fs_extra = "1.1.0"
