ghaction: store default config and sounds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,20 @@ jobs:
     - name: Build soundboard binary
       run: cargo build --verbose --release
     - name: Archive soundboard binary
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2
       with:
         name: soundboard-x86_64-debian-linux-gnu
         path: target/release/soundboard
+    - name: Archive soundboard sounds dir
+      uses: actions/upload-artifact@v2
+      with:
+        name: soundboard-x86_64-debian-linux-gnu
+        path: target/release/soundboard/sounds/
+    - name: Archive soundboard default config
+      uses: actions/upload-artifact@v2
+      with:
+        name: soundboard-x86_64-debian-linux-gnu
+        path: target/release/soundboard/soundboard.toml
 
   windows:
     runs-on: windows-latest
@@ -67,6 +77,16 @@ jobs:
       with:
         name: soundboard-x86_64-pc-windows-msvc
         path: target/release/soundboard.exe
+    - name: Archive soundboard sounds dir
+      uses: actions/upload-artifact@v2
+      with:
+        name: soundboard-x86_64-pc-windows-msvc
+        path: target/release/soundboard/sounds/
+    - name: Archive soundboard default config
+      uses: actions/upload-artifact@v2
+      with:
+        name: soundboard-x86_64-pc-windows-msvc
+        path: target/release/soundboard/soundboard.toml
 
   macos:
     runs-on: macOS-latest
@@ -98,7 +118,17 @@ jobs:
         MACOSX_DEPLOYMENT_TARGET: 10.14
       run: cargo build --verbose --release
     - name: Archive soundboard binary
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2
       with:
         name: soundboard-x86_64-apple-darwin
         path: target/release/soundboard
+    - name: Archive soundboard sounds dir
+      uses: actions/upload-artifact@v2
+      with:
+        name: soundboard-x86_64-apple-darwin
+        path: target/release/soundboard/sounds/
+    - name: Archive soundboard default config
+      uses: actions/upload-artifact@v2
+      with:
+        name: soundboard-x86_64-apple-darwin
+        path: target/release/soundboard/soundboard.toml
