httpserver: add external api via http for fun and hot web app

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ regex = "1"
 strum = "0.18"
 strum_macros = "0.18"
 crossbeam-channel = "0.4"
-tokio = "0.2"
+tokio = { version = "0.2", features = ["macros"] }
+warp = "0.2"
 
 [build-dependencies]
 fs_extra = "1.1.0"
