--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tokio = { version = "0.2", features = ["macros"] }
 warp = "0.2"
 mp3-duration = "0.1.9"
 ogg_metadata = "0.4"
+futures = "0.3"
 
 [build-dependencies]
 fs_extra = "1.1.0"
