--- a/soundboard.toml
+++ b/soundboard.toml
@@ -1,8 +1,9 @@
 # input_device = 0
 # output_device = 1
 loopback_device = 0
-
 stop_hotkey = "ALT-S"
+http_server = true
+no_gui = false
 
 [[soundboard]]
 name = "default"
