--- a/.github/workflows/format_and_clippy.yml
+++ b/.github/workflows/format_and_clippy.yml
@@ -20,6 +20,8 @@ jobs:
             toolchain: nightly
             components: clippy
             override: true
+      - name: Install alsa
+        run: sudo apt-get install alsa alsa-tools libasound2-dev
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
