--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ warp = "0.2"
 mp3-duration = "0.1.9"
 ogg_metadata = "0.4"
 futures = "0.3"
-miniaudio = "0.6.0"
+miniaudio = "0.6"
+minimp3 = "0.3"
 
 [build-dependencies]
 fs_extra = "1.1.0"
