--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,32 +9,43 @@ edition = "2018"
 [profile.release]
 lto = true
 
+[features]
+default = ["mp3", "flac", "vorbis", "wav", "http", "gui"]
+mp3 = ["minimp3", "mp3-duration"]
+flac = ["claxon"]
+vorbis = ["lewton", "ogg_metadata"]
+wav = ["hound"]
+http = ["warp", "futures"]
+gui = ["iced", "iced_native"]
+
 [dependencies]
-cpal = "0.11"
-rodio = "0.11"
+miniaudio = "0.6"
 hotkey = { path = "extern/hotkey-rs", version = "0.3" }
-iced = { version = "0.1", features = ["tokio"] }
-iced_native = "0.2"
 clap = "3.0.0-beta.1"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
 log = "0.4"
-env_logger = "0.7.1"
-random_color = "0.4"
-ringbuf = "0.2.1"
+env_logger = "0.7"
 reqwest = { version = "0.10", features = ["blocking"] }
 regex = "1"
 strum = "0.18"
 strum_macros = "0.18"
 crossbeam-channel = "0.4"
 tokio = { version = "0.2", features = ["macros"] }
-warp = "0.2"
-mp3-duration = "0.1.9"
-ogg_metadata = "0.4"
-futures = "0.3"
-miniaudio = "0.6"
-minimp3 = "0.3"
+
+iced = { version = "0.1", optional = true, features = ["tokio"] }
+iced_native = {version = "0.2", optional = true }
+
+warp = {version = "0.2", optional = true }
+futures = {version = "0.3", optional = true }
+
+mp3-duration = {version = "0.1", optional = true }
+ogg_metadata = {version = "0.4", optional = true }
+minimp3 = {version = "0.3", optional = true }
+hound = {version = "3", optional = true }
+lewton = {version = "0.10", optional = true }
+claxon = {version = "0.4", optional = true }
 
 [build-dependencies]
-fs_extra = "1.1.0"
+fs_extra = "1"
