--- a/extern/libxm-rs/Cargo.toml
+++ b/extern/libxm-rs/Cargo.toml
@@ -1,5 +1,4 @@
 [package]
-
 name = "libxm"
 version = "1.0.0"
 authors = ["Dan Spencer <dan@atomicpotato.net>"]
@@ -13,10 +12,10 @@ links = "xm"
 build = "build.rs"
 
 [dependencies]
-libc = "*"
+libc = "0.2"
 
 [build-dependencies]
-gcc = "0.3"
+cc = "1.0"
 
 [dev-dependencies]
 getopts = "0.2"
