--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,10 @@ jobs:
           ~/.cargo/git
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - name: Install alsa
-      run: sudo apt-get install alsa alsa-tools libasound2-dev
     - name: Build debug soundboard binary
       run: cargo build --verbose
+    - name: Run tests
+      run: cargo test
   #  - name: Build soundboard binary
   #    run: cargo build --verbose --release
   #  - name: Archive soundboard binary
@@ -52,8 +52,20 @@ jobs:
           ~/.cargo/git
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+    - name: Install llvm
+      shell: powershell
+      run: |
+        Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
+        scoop install llvm --global
+        echo "::set-env name=PATH::$env:PATH"
     - name: Build debug soundboard binary
+      env:
+        LIBCLANG_PATH: "C:\\ProgramData\\scoop\\apps\\llvm\\current\\bin"
       run: cargo build --verbose
+    - name: Run tests
+      env:
+        LIBCLANG_PATH: "C:\\ProgramData\\scoop\\apps\\llvm\\current\\bin"
+      run: cargo test
     # - name: Build soundboard binary
     #   run: cargo build --verbose --release
     # - name: Archive soundboard binary
@@ -88,6 +100,10 @@ jobs:
       env:
         MACOSX_DEPLOYMENT_TARGET: 10.14
       run: cargo build --verbose
+    - name: Run tests
+      env:
+        MACOSX_DEPLOYMENT_TARGET: 10.14
+      run: cargo test
     # - name: Build soundboard binary
     #   env:
     #     MACOSX_DEPLOYMENT_TARGET: 10.14
